force-app/main/default/objects/Teacher_Working_Hours__c/Teacher_Working_Hours__c.object-meta.xml
<CustomObject>
    <description>This object is use for get and identify the working hours of teachers</description>
    <label>Teacher Working Hours</label>
    <nameField>
        <displayFormat>TWH -{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teacher Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>