force-app/main/default/objects/Teacher_Working_Hours__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is use for to identify the working hour is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>