force-app/main/default/objects/Teacher_Working_Hours__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <description>This picklist is use for get the weekday</description>
    <label>Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>