force-app/main/default/objects/Teacher_Working_Hours__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>This field is use for to store the end of the day working time of teacher</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>