force-app/main/default/objects/Teacher_Working_Hours__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>This field is use for to store the start working  time of teacher</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>