force-app/main/default/objects/Teacher_Working_Hours__c/validationRules/Time_can_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_can_not_be_blank</fullName>
    <active>false</active>
    <description>This validation rule is use for to validate time  when a user creating the working hours record and rule is active so that time, start time and end time shouldn&apos;t blank.</description>
    <errorConditionFormula>Start_Time__c &gt;=  End_Time__c</errorConditionFormula>
    <errorMessage>Start time must be less than end time</errorMessage>
</ValidationRule>