force-app/main/default/objects/Teacher_Working_Hours__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Teacher__c</columns>
    <columns>Location__c</columns>
    <columns>Day__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>